--- a/app/src/main/res/layout/activity_event_finder.xml
+++ b/app/src/main/res/layout/activity_event_finder.xml
@@ -62,7 +62,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/ll"
+            android:id="@+id/ll_detailed"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -103,7 +103,7 @@
             app:layout_constraintBottom_toTopOf="@+id/btn_create_new_event"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ll">
+            app:layout_constraintTop_toBottomOf="@+id/ll_detailed">
 
         </android.support.v7.widget.RecyclerView>
 
