--- a/app/src/main/res/layout/activity_questionnaire_answers.xml
+++ b/app/src/main/res/layout/activity_questionnaire_answers.xml
@@ -111,6 +111,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/md_blue_grey_100"
             android:orientation="vertical">
 
             <android.support.v7.widget.RecyclerView
