--- a/app/src/main/res/layout/activity_questionnaire_answers.xml
+++ b/app/src/main/res/layout/activity_questionnaire_answers.xml
@@ -6,6 +6,7 @@
     android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:descendantFocusability="beforeDescendants"
     android:background="@color/md_blue_grey_100">
 
     <android.support.v7.widget.Toolbar
@@ -46,9 +47,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="false"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
+                    android:padding="8dp"
                     android:text="TextView"
                     android:textSize="18sp"
                     android:textStyle="bold"
@@ -58,12 +57,10 @@
 
                 <TextView
                     android:id="@+id/tvIsNecessary"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="4dp"
                     android:maxWidth="128dp"
+                    android:padding="8dp"
                     android:text="TextView"
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
