--- a/app/src/main/res/layout/item_question_header.xml
+++ b/app/src/main/res/layout/item_question_header.xml
@@ -18,12 +18,10 @@
 
         <TextView
             android:id="@+id/tvQuestion"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="false"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:padding="8dp"
             android:text="TextView"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -33,13 +31,10 @@
 
         <TextView
             android:id="@+id/tvIsNecessary"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
             android:maxWidth="128dp"
+            android:padding="8dp"
             android:text="TextView"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
