--- a/app/src/main/res/layout/activity_event_finder.xml
+++ b/app/src/main/res/layout/activity_event_finder.xml
@@ -28,32 +28,17 @@
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorGreen"
+            android:background="@color/material_drawer_divider"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <ImageButton
-                android:id="@+id/event_finder_btn"
-                style="@style/Widget.AppCompat.ImageButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:layout_weight="1"
-                android:background="@color/cardview_shadow_end_color"
-                android:visibility="visible"
-                app:srcCompat="@android:drawable/ic_menu_search" />
-
             <SearchView
                 android:id="@+id/searchPlace"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:visibility="gone"
+                android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView">
@@ -73,23 +58,35 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/logo_events_activity">
 
-            <Button
+            <TextView
                 android:id="@+id/btn_favorite_events"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="1dp"
                 android:layout_weight="1"
-                android:background="@color/colorGreen"
-                android:text="FAVORITE EVENTS" />
+                android:paddingRight="16dp"
+                android:text="FAVORITE"
+                android:textAlignment="textEnd"
+                android:textColor="@color/colorAuthText"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
-            <Button
+            <View
+                android:layout_width="2dp"
+                android:layout_height="24sp"
+                android:background="#ffffff"
+                android:padding="10dp" />
+
+            <TextView
                 android:id="@+id/btn_all_events"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="@color/colorGreen"
-                android:text="ALL EVENTS" />
+                android:paddingLeft="16dp"
+                android:text="ALL EVENTS"
+                android:textAlignment="textStart"
+                android:textColor="@color/colorAuthText"
+                android:textSize="18sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
@@ -107,16 +104,22 @@
 
         </android.support.v7.widget.RecyclerView>
 
-        <Button
+        <TextView
             android:id="@+id/btn_create_new_event"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@color/colorGreen"
-            android:text="CREATE NEW EVENT"
-            android:textSize="24sp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:padding="8dp"
+            android:text="Create New Event"
+            android:textAlignment="textEnd"
+            android:textAllCaps="false"
+            android:textColor="@color/colorAuthText"
+            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
