--- a/app/src/main/res/layout/item_interview_list.xml
+++ b/app/src/main/res/layout/item_interview_list.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cardView"
+    android:id="@+id/interviewCardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp">
@@ -22,7 +22,7 @@
 
             <TextView
                 android:id="@+id/tvInterviewTitle"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="false"
                 android:layout_marginEnd="8dp"
@@ -38,17 +38,19 @@
 
             <TextView
                 android:id="@+id/tvInterviewTopic"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_alignLeft="@+id/tvInterviewTitle"
                 android:layout_alignStart="@+id/tvInterviewTitle"
                 android:layout_below="@+id/tvInterviewTitle"
+                android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:maxWidth="128dp"
                 android:text="TextView"
                 android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/civInterview"
@@ -68,19 +70,17 @@
 
             <Button
                 android:id="@+id/answer_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:background="@color/cardview_shadow_end_color"
-                android:text="ADD ANSWER"
-                android:textColor="@color/colorAuthHintText"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/chat_icon"
+                android:backgroundTint="@color/colorGreen"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toEndOf="@+id/civInterview" />
+                app:layout_constraintStart_toEndOf="@+id/civInterview"
+                app:layout_constraintTop_toBottomOf="@+id/tvInterviewTopic" />
 
 
         </android.support.constraint.ConstraintLayout>
@@ -89,7 +89,8 @@
             android:id="@+id/add_interview_answe"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"></LinearLayout>
+            android:orientation="vertical"
+            android:padding="8dp"/>
 
     </LinearLayout>
 
