--- a/app/src/main/res/layout/item_question_questionnarie_answer.xml
+++ b/app/src/main/res/layout/item_question_questionnarie_answer.xml
@@ -79,6 +79,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
+                    android:focusable="auto"
                     android:hint="PLASE ANSWER HERE"
                     android:inputType="textPersonName"
                     android:textColor="@color/colorDarkBlue"
