--- a/app/src/main/res/layout/item_questionnaire_list.xml
+++ b/app/src/main/res/layout/item_questionnaire_list.xml
@@ -19,12 +19,10 @@
 
         <TextView
             android:id="@+id/tvQuestionnaireTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="false"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:padding="8dp"
             android:text="TextView"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -35,18 +33,18 @@
 
         <TextView
             android:id="@+id/tvQuestionnaireTopic"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:maxWidth="128dp"
+            android:padding="8dp"
             android:text="TextView"
             android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/civQuestionnaire"
-            app:layout_constraintTop_toBottomOf="@+id/tvQuestionnaireTitle" />
+            app:layout_constraintTop_toBottomOf="@+id/tvQuestionnaireTitle"
+            app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
             android:id="@+id/civQuestionnaire"
